--- a/package.json
+++ b/package.json
@@ -6,17 +6,30 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
+    "apollo": "vue-cli-service apollo:watch",
+    "apollo:run": "vue-cli-service apollo:run",
+    "storybook:build": "vue-cli-service storybook:build -c config/storybook",
+    "storybook:serve": "vue-cli-service storybook:serve -p 6006 -c config/storybook",
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "casual": "^1.6.0",
+    "graphql-type-json": "^0.2.1",
+    "gsap": "^2.0.2",
+    "lowdb": "^1.0.0",
+    "mkdirp": "^0.5.1",
     "register-service-worker": "^1.5.2",
+    "shortid": "^2.2.8",
     "vue": "^2.5.22",
+    "vue-apollo": "^3.0.0-beta.11",
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^7.0.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
+    "@storybook/addon-actions": "^4.1.0",
+    "@storybook/addon-links": "^4.1.0",
     "@types/jest": "^23.1.4",
     "@vue/cli-plugin-babel": "^3.4.0",
     "@vue/cli-plugin-pwa": "^3.4.0",
@@ -25,10 +38,13 @@
     "@vue/cli-service": "^3.4.0",
     "@vue/test-utils": "^1.0.0-beta.20",
     "babel-core": "7.0.0-bridge.0",
+    "graphql-tag": "^2.9.0",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.1.0",
     "ts-jest": "^23.0.0",
     "typescript": "^3.0.0",
+    "vue-cli-plugin-apollo": "^0.19.1",
+    "vue-cli-plugin-storybook": "^0.5.0",
     "vue-template-compiler": "^2.5.21"
   }
 }
