--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "bulma": "^0.7.2",
     "casual": "^1.6.0",
     "graphql-type-json": "^0.2.1",
     "gsap": "^2.0.2",
@@ -25,6 +26,7 @@
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^7.0.0",
     "vue-router": "^3.0.1",
+    "vue-styled-components": "^1.4.4",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
