--- a/package.json
+++ b/package.json
@@ -10,43 +10,60 @@
     "apollo:run": "vue-cli-service apollo:run",
     "storybook:build": "vue-cli-service storybook:build -c config/storybook",
     "storybook:serve": "vue-cli-service storybook:serve -p 6006 -c config/storybook",
-    "test:unit": "vue-cli-service test:unit"
+    "test:unit": "vue-cli-service test:unit",
+    "deploy": "gh-pages-deploy",
+    "clean-source": "rimraf README.md src webroot package.json"
+  },
+  "gh-pages-deploy": {
+    "staticpath": "dist",
+    "cname": "nope.org",
+    "prep": [
+      "build-sass",
+      "optimize-img"
+    ],
+    "commit": "a custom commit message",
+    "post": [
+      "clean-source"
+    ],
+    "noprompt": false
   },
   "dependencies": {
-    "bulma": "^0.7.2",
+    "bulma": "^0.7.4",
     "casual": "^1.6.0",
+    "css-scroll-snap-polyfill": "^0.1.2",
     "graphql-type-json": "^0.2.1",
     "gsap": "^2.0.2",
     "lowdb": "^1.0.0",
     "mkdirp": "^0.5.1",
-    "register-service-worker": "^1.5.2",
-    "shortid": "^2.2.8",
+    "register-service-worker": "^1.6.2",
+    "shortid": "^2.2.14",
     "vue": "^2.5.22",
-    "vue-apollo": "^3.0.0-beta.11",
-    "vue-class-component": "^6.0.0",
-    "vue-property-decorator": "^7.0.0",
-    "vue-router": "^3.0.1",
+    "vue-apollo": "^3.0.0-beta.28",
+    "vue-class-component": "^6.3.2",
+    "vue-property-decorator": "^7.3.0",
+    "vue-router": "^3.0.2",
     "vue-styled-components": "^1.4.4",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^4.1.0",
-    "@storybook/addon-links": "^4.1.0",
-    "@types/jest": "^23.1.4",
-    "@vue/cli-plugin-babel": "^3.4.0",
-    "@vue/cli-plugin-pwa": "^3.4.0",
-    "@vue/cli-plugin-typescript": "^3.4.0",
-    "@vue/cli-plugin-unit-jest": "^3.4.0",
-    "@vue/cli-service": "^3.4.0",
-    "@vue/test-utils": "^1.0.0-beta.20",
+    "@storybook/addon-actions": "^4.1.13",
+    "@storybook/addon-links": "^4.1.13",
+    "@types/jest": "^23.1.6",
+    "@vue/cli-plugin-babel": "^3.4.1",
+    "@vue/cli-plugin-pwa": "^3.4.1",
+    "@vue/cli-plugin-typescript": "^3.4.1",
+    "@vue/cli-plugin-unit-jest": "^3.4.1",
+    "@vue/cli-service": "^3.4.1",
+    "@vue/test-utils": "^1.0.0-beta.29",
     "babel-core": "7.0.0-bridge.0",
-    "graphql-tag": "^2.9.0",
-    "node-sass": "^4.9.0",
+    "gh-pages-deploy": "^0.5.1",
+    "graphql-tag": "^2.10.1",
+    "node-sass": "^4.9.4",
     "sass-loader": "^7.1.0",
-    "ts-jest": "^23.0.0",
-    "typescript": "^3.0.0",
+    "ts-jest": "^23.10.5",
+    "typescript": "^3.3.3",
     "vue-cli-plugin-apollo": "^0.19.1",
-    "vue-cli-plugin-storybook": "^0.5.0",
-    "vue-template-compiler": "^2.5.21"
+    "vue-cli-plugin-storybook": "^0.5.2",
+    "vue-template-compiler": "^2.5.22"
   }
 }
