update graphql url

--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
 VUE_APP_GRAPHQL_HTTP=https://aboutblank.glitch.me/graphql
-VUE_APP_GRAPHQL_WS=ws://aboutblank.glitch.me/graphql
+VUE_APP_GRAPHQL_WS=wss://aboutblank.glitch.me/graphql
